--- a/UsrReality/Files/Directory.Build.props
+++ b/UsrReality/Files/Directory.Build.props
@@ -1,3 +1,5 @@
 <Project>
-	<ItemGroup Label="Entity Files" Condition="'$(PkgPath)' != ''"></ItemGroup>
+	<ItemGroup Label="Entity Files" Condition="'$(PkgPath)' != ''">
+		<Compile Include="$(PkgPath)/UsrReality/Schemas/UsrTrafficLIght/UsrTrafficLIght.cs" Condition="Exists('$(PkgPath)/UsrReality/Schemas/UsrTrafficLIght/UsrTrafficLIght.cs')" />
+	</ItemGroup>
 </Project>
